@@ -1,4 +1,4 @@
-name                = Dist-Zilla-Plugin-MungeFile-WithDataSection
+name                = Dist-Zilla-Plugin-MungeFile
 author              = Karen Etheridge <ether@cpan.org>
 copyright_holder    = Karen Etheridge
 copyright_year      = 2013
@@ -8,9 +8,8 @@ license             = Perl_5
 
 [@Author::ETHER]
 :version = 0.094
-Test::MinimumVersion.max_target_perl = 5.010000
+Test::MinimumVersion.max_target_perl = 5.008003
 Test::ReportPrereqs.include = CPAN::Meta::Validator
--remove = MetaTests ; until Test::CPAN::Meta is fixed
 
 [Prereqs]
 Dist::Zilla = 4.300039  ; v2 meta-compliant license field
@@ -24,7 +23,3 @@ x_MailingList = http://dzil.org/#mailing-list
 
 [Test::CheckBreaks]
 conflicts_module = Moose::Conflicts
-
-[Deprecated]
-:version = 0.003
-module = Dist::Zilla::Plugin::MungeFile::WithData
