@@ -7,6 +7,22 @@ use Test::DZil;
 use Path::Tiny;
 use Test::Deep;
 
+{
+    package MySpecialMunger;
+    our $VERSION = '0.666';
+    use Moose;
+    extends 'Dist::Zilla::Plugin::MungeFile';
+
+    sub munge_file
+    {
+        my ($self, $file) = @_;
+        $self->next::method(
+            $file,
+            { my_arg => 'hello, this is dog' },
+        );
+    }
+}
+
 my $tzil = Builder->from_config(
     { dist_root => 'does-not-exist' },
     {
@@ -14,23 +30,13 @@ my $tzil = Builder->from_config(
             path(qw(source dist.ini)) => simple_ini(
                 [ GatherDir => ],
                 [ MetaConfig => ],
-                [ 'MungeFile::WithDataSection' => { finder => ':MainModule' } ],
+                [ '=MySpecialMunger' => { finder => ':MainModule' } ],
             ),
             'source/lib/Module.pm' => <<'MODULE'
 package Module;
 
-my $string = {{
-'"our list of items are: '
-. join(', ', split(' ', $DATA))   # awk-style emulation
-. "...\n" . 'And that\'s just great!\n"'
-}};
+my $string = "{{ uc($my_arg) }}";
 1;
-__END__
-This is content that should not be in the DATA section.
-__DATA__
-dog
-cat
-pony
 MODULE
         },
     },
@@ -41,27 +47,15 @@ $tzil->build;
 
 my $content = $tzil->slurp_file('build/lib/Module.pm');
 
-    if ($content =~ m/(?:\n__END__(\n.*)?)\n__DATA__\n/sp)
-    {
-        print "### matched end then data\n";
-    }
-
 is(
     $content,
     <<'NEW_MODULE',
 package Module;
 
-my $string = "our list of items are: ...
-And that's just great!\n";
+my $string = "HELLO, THIS IS DOG";
 1;
-__END__
-This is content that should not be in the DATA section.
-__DATA__
-dog
-cat
-pony
 NEW_MODULE
-    '__DATA__ after __END__ is not seen',
+    'module content is transformed, using arguments passed in from the subclassed plugin',
 );
 
 cmp_deeply(
@@ -70,15 +64,16 @@ cmp_deeply(
         x_Dist_Zilla => superhashof({
             plugins => supersetof(
                 {
-                    class => 'Dist::Zilla::Plugin::MungeFile::WithDataSection',
+                    class => 'MySpecialMunger',
                     config => {
-                        'Dist::Zilla::Plugin::MungeFile::WithDataSection' => {
+                        'Dist::Zilla::Plugin::MungeFile' => {
                             finder => [ ':MainModule' ],
                             files => [ ],
+                            version => Dist::Zilla::Plugin::MungeFile->VERSION,
                         },
                     },
-                    name => 'MungeFile::WithDataSection',
-                    version => Dist::Zilla::Plugin::MungeFile::WithDataSection->VERSION,
+                    name => '=MySpecialMunger',
+                    version => '0.666',
                 },
             ),
         }),
